data cleaning and EDA

--- a/src/1 data extraction.ipynb
+++ b/src/1 data extraction.ipynb
@@ -510,8 +510,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bb39ee07-1efe-441b-a2fe-a973d80ba5c1",
+   "metadata": {},
+   "source": [
+    "Saving the file locally makes it easier to access later for future analysis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "80be6910-1f57-48c0-b2f5-b701f25853a0",
    "metadata": {},
    "outputs": [],
