--- a/src/1 data extraction.ipynb
+++ b/src/1 data extraction.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7fb2f4f4-94f3-4829-b9cb-04b6cab2d303",
    "metadata": {},
    "outputs": [
@@ -39,9 +39,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading arxiv.zip to /home/ubuntu/Documents/arXiv project/exploratory analysis/arxiv_exploratory_data_analysis/src\n",
-      "100%|██████████████████████████████████████| 1.19G/1.19G [00:30<00:00, 38.9MB/s]\n",
-      "100%|██████████████████████████████████████| 1.19G/1.19G [00:30<00:00, 41.7MB/s]\n"
+      "Downloading arxiv.zip to /home/ubuntu/Documents/arXiv project/bsc-project-22_23---source-code-pietro-verde/code\n",
+      "100%|█████████████████████████████████████▊| 1.14G/1.14G [00:24<00:00, 75.3MB/s]\n",
+      "100%|██████████████████████████████████████| 1.14G/1.14G [00:24<00:00, 50.2MB/s]\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cbaf137b-0539-4ba7-a763-64904593b79d",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2f16139d-7bb4-4181-be4e-89fb71c88b3a",
    "metadata": {},
    "outputs": [],
@@ -72,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "17bc0307-409c-4ffe-b73c-9b9bfae87cb0",
+   "execution_count": 1,
+   "id": "4d7fc21b-40d3-4901-9a98-54d52107a477",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "2380f6a7-e594-4d2c-8dcf-65453b8013dc",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "13ba2583-a999-4c81-8e9b-e638cc41af3c",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "7f0971f4-8b47-42b0-888e-7bae43633c9e",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
        "  ['Yuan', 'C. -P.', '']]}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "d55aa455-8f51-4cd6-b9ff-d88bcdd76515",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of items: 2326839\n"
+      "Total number of items: 2190411\n"
      ]
     }
    ],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "fa342f7c-28f3-464a-8d7d-bafb73927f8f",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "1f12716d-b577-4b6e-ac3c-fb80b793f3b9",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
        "4  [[Abu-Shammala, Wael, ], [Torchinsky, Alberto, ]]  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "24f0f9ac-43b3-4c82-957a-fa8b69af6745",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2326839 entries, 0 to 2326838\n",
+      "RangeIndex: 2190411 entries, 0 to 2190410\n",
       "Data columns (total 14 columns):\n",
       " #   Column          Dtype \n",
       "---  ------          ----- \n",
@@ -419,7 +419,7 @@
       " 12  update_date     object\n",
       " 13  authors_parsed  object\n",
       "dtypes: object(14)\n",
-      "memory usage: 248.5+ MB\n"
+      "memory usage: 234.0+ MB\n"
      ]
     }
    ],
@@ -429,17 +429,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "e30a830d-ad9f-4a33-96c5-11a1566a2c94",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([], dtype=object)"
+       "array(['math-ph/0207039', 'math-ph/0212014', 'math-ph/0408005',\n",
+       "       'math-ph/0409039'], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,12 +454,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "ec9feb1d-a647-4a15-aa40-a6f3b20b0f4f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# remove duplicates if found\n",
+    "# remove duplicates\n",
     "raw_data.drop_duplicates(\"id\", inplace=True)\n",
     "raw_data.reset_index(drop=True, inplace=True)\n",
     "raw_data.drop(\"count_of_id\", axis=1, inplace=True)"
@@ -466,17 +467,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "effc97e5-7a86-42a3-9f1b-b383328faf81",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2326839, 14)"
+       "(2190407, 14)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,8 +487,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7dbd8dd6-a5f5-4584-929a-477477ffacd7",
+   "metadata": {},
+   "source": [
+    "The data contains articles from the 23rd of May 2007 until the 13th of January 2023"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "id": "6a32f185-4c00-42c0-8f14-23b6d147b477",
    "metadata": {},
    "outputs": [
@@ -495,23 +504,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Dates of publication of the articles in the dataset:\n",
-      "\n",
       "First date: 2007-05-23\n",
-      "Last date: 2023-09-16\n"
+      "Last date: 2023-01-13\n"
      ]
     }
    ],
    "source": [
     "from_date = min(raw_data[\"update_date\"])\n",
     "to_date = max(raw_data[\"update_date\"])\n",
-    "print(f'\\nDates of publication of the articles in the dataset:\\n\\nFirst date: {from_date}\\nLast date: {to_date}')"
+    "print(f'First date: {from_date}\\nLast date: {to_date}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bb39ee07-1efe-441b-a2fe-a973d80ba5c1",
+   "id": "0afc27b9-bd26-4b4d-a698-cb1a14520815",
    "metadata": {},
    "source": [
     "Saving the file locally makes it easier to access later for future analysis."
@@ -519,12 +525,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "80be6910-1f57-48c0-b2f5-b701f25853a0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## caching file\n",
     "raw_data.to_parquet(\"../data/raw.parquet.gzip\")"
    ]
   }
