--- a/src/01 data extraction.ipynb
+++ b/src/01 data extraction.ipynb
@@ -7,7 +7,11 @@
    "source": [
     "# Data Extraction\n",
     "\n",
-    "The data is retrieved from the Kaggle and stored locally<br>"
+    "arXiv makes the data available from an API (https://info.arxiv.org/help/api/index.html) where publications can be retrieved individually. For bulk access, a full dataset is uploaded to the Kaggle website and updated once a month (https://www.kaggle.com/datasets/Cornell-University/arxiv). This is the source that has been used for this project.\n",
+    "\n",
+    "In this first notebook, the data is retrieved from the Kaggle API and stored locally<br>\n",
+    "\n",
+    "The dataset retrieved has metadata about the arXiv publications and not the full content of each article."
    ]
   },
   {
