--- a/src/02 cleaning and EDA.ipynb
+++ b/src/02 cleaning and EDA.ipynb
@@ -7,6 +7,9 @@
    "source": [
     "# Cleaning and EDA\n",
     "\n",
+    "\n",
+    "The text used is taken from the title and abstract of each arXiv paper analysed. The subjects considered are physics, mathematics, computer science, while all others with lower representativeness in terms of sample size have been aggregated under a category labelled as other.\n",
+    "\n",
     "The categories are formatted into the final target variables.\n",
     "\n",
     "The final text column is created by concatenating the title and abstract columns<br>"
