--- a/src/03 text_preprocessing.ipynb
+++ b/src/03 text_preprocessing.ipynb
@@ -7,7 +7,24 @@
    "source": [
     "# Text preprocessing\n",
     "\n",
-    "Text cleaning and tokenization.<br>"
+    "\n",
+    "Cleaning text is an essential step in any NLP procedure, and it can significantly impact the accuracy and performance of machine learning models. Text data usually contains noise, such as punctuation, stopwords, and other information that is often filtered out before creating an input for the model. The level of text preparation at this stage may vary according to the modelling technique used and the type of analysis. In general, a good cleaning procedure can improve the efficiency and effectiveness of NLP models and speed up the training process.\n",
+    "\n",
+    "The process of separating out a sequence of text into units is called tokenization. Sentences, words, syllables or even letters are possible solutions, depending on the technique. The tokenization method implemented is one the most common ones where words are treated as tokens and are separated by spaces. Characters that are not a word character or whitespace characters, such as punctuation marks or special characters were removed. These correspond to the regular expression pattern [^\\w\\s].\n",
+    "\n",
+    "Length of words has been considered as well and therefore words shorter than 3 characters were removed.\n",
+    "\n",
+    "Words that occur frequently in a language but do not carry much meaning are called stopwords in the context of NLP. These are usually filtered out from NLP tasks, because they are considered noise in text analysis.\n",
+    "\n",
+    "Examples of stopwords in English include words such as \"the\", “and”, \"a\", \"an\", \"in\", \"on\", \"at\", \"of\", \"to\", \"for\", \"with\", \"is\", \"are\", \"am\", \"was\", \"were\", \"be\", \"been\", \"being\". A list of English stopwords made available by the popular package NLTK was used as a filter.\n",
+    "\n",
+    "The reduction of words to their base or root form can help to simplify the text and reduce the size of the vocabulary. A common technique for this is called stemming. This practice consists of removing the end part of each word by applying some fixed rules. For example, the word adjustable is reduced to its base form adjust, while the word airline is modified to airlin and chasing results in the root word chas.\n",
+    "\n",
+    "This helps to standardise the text, but clearly, as in the examples just shown, the resulting base form is not always a linguistically correct word. Nevertheless, it is an effective technique and in fact it is commonly adopted in search engines to retrieve relevant documents and in text classification pipelines to reduce the feature space before training a machine learning model.\n",
+    "\n",
+    "\n",
+    "A slightly more sophisticated root extraction method is called lemmatisation, which is a technique that is used to reduce a word to its dictionary form (lemma). Unlike stemming, lemmatisation will always produce a meaningful word belonging to the language in which it is adopted. For example, all conjugated forms of the verb run, like ran, running are converted to run. Lexical databases, like WordNet provide open access lookup tools to lemmatise a sequence of text.\n",
+    "Usually only one root extraction technique is applied to a text to use for NLP tasks. For this project, lemmatisation was preferred as it was perceived more capable of condensation. The Spacy Lemmatizer component was utilised for this purpose."
    ]
   },
   {
@@ -68,6 +85,14 @@
    "source": [
     "stemmer = nltk.stem.SnowballStemmer('english')\n",
     "nlp = spacy.load(\"en_core_web_lg\") # for lemmatisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50a9ecf3-3cd7-49dc-9b4c-eae2bcc08330",
+   "metadata": {},
+   "source": [
+    "The prefixes “http\" and \"https” and the top-level domain suffix were removed from URLs. All other level domains have been left, as in same cases these could provide names of organisations or websites that could help to identify a topic."
    ]
   },
   {
