--- a/src/05 N-gram analysis.ipynb
+++ b/src/05 N-gram analysis.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# N-gram analysis on the training data\n",
     "\n",
-    "Unigrams, Bigrams and Trigrams from the training dataset are plotted"
+    "A common step in most NLP pipelines is an n-gram analysis. N-grams are contiguous sequences of linguistic items (or tokens) extracted from document, where an item can be a word, a letter, a phoneme, a syllable, or any other unit, depending on the application. N-gram tokens containing a single word are commonly referred to as unigrams. Pairs of words are called bigrams, while trigrams contain three words."
    ]
   },
   {
@@ -216,6 +216,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef75340c-7951-4044-9be1-37c3f5e89da7",
+   "metadata": {},
+   "source": [
+    "Below are plots of the top 10 most frequent unigrams, bigrams and trigrams split by the target classes. A simple analysis of the frequency of occurrence of different n-grams in a corpus of text can provide some powerful intuition on the topics discussed within the corpus. Words like quantum and field in the physics category or function and equation in mathematics demonstrate this point. The word datum is an example of root extraction through lemmatisation, while data is the form in which it is mostly expected to occur in English."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "bb1e239c-eff1-4eb4-bb0b-d84494fcf404",
@@ -243,6 +251,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9e181dd-a765-464a-8cfd-908c5654705d",
+   "metadata": {},
+   "source": [
+    "Bigrams show a better differentiation between the classes. It is interesting to note the level of interdisciplinarity among these subjects, made clear by bigrams such as machine learn (lemma of learning) or deep learning."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "b69ddf53-e57f-478a-b5d9-9a5814c8671b",
@@ -267,6 +283,14 @@
     "    items_to_plot, grouped, counts_dfs = pickle.load(f)\n",
     "\n",
     "plot_ngrams(title, text_col, class_col, items_to_plot, grouped, counts_dfs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27e19c1e-4a5e-46f8-8986-8aa4066d3b08",
+   "metadata": {},
+   "source": [
+    "Looking at the trigrams plot it is easy to appreciate the increase of sparsity in the data. The count of the top 10 most recurring trigrams is fairly low when compared to the bigrams and unigrams plots."
    ]
   },
   {
