--- a/src/06 TFIDF_vectorization.ipynb
+++ b/src/06 TFIDF_vectorization.ipynb
@@ -7,7 +7,23 @@
    "source": [
     "# TF-IDF feature extraction\n",
     "\n",
-    "TfidfVectorizer is fitted on the trainining data. The resulting model is used to create feature vectors out of the train, validation and testing data.\n",
+    "Feature engineering is a large focus of research NLP. Text cannot be fed directly into a machine learning model. Therefore, we need some kind of numerical representation.\n",
+    "\n",
+    "Bag-of-words (BOW) is a farily old but still somewhat popular feature engineering method for text. In this approach, a vocabulary of all the unique words in the corpus is created and each document is represented as a vector of\n",
+    "word counts. This method ignores the order of words in the text but can still be effective for many NLP tasks. In fact, this is the method used the n-gram analysis on the arXiv dataset in the previous notebook. A version of this can use bigrams or even additional number of words taken together in sequence.\n",
+    "\n",
+    "Term frequency-inverse document frequency (TF-IDF) is a variation of BOW where instead of a simple count, a weight is used, representing the importance of words in a document. Words that appear frequently in a document and rarely in others are given a relatively higher weight compared to more common words.\n",
+    "\n",
+    "The calculation for TF-IDF is the following:\n",
+    "\n",
+    "For each word taken from a document belonging to a set of documents,\n",
+    "TF = (count of word / total words) in the same document\n",
+    "IDF = log(total count of documents / count of documents that contain the word)\n",
+    "TF-IDF = TF * IDF\n",
+    "\n",
+    "where TF stands for Term Frequency in document and IDF for Inverse Document Frequency.\n",
+    "\n",
+    "In this notebook, a TfidfVectorizer is fitted on the trainining data. The resulting model is used to create feature vectors out of the train, validation and testing data.\n",
     "\n",
     "Two versions of the TF-IDF vectorization model are trained. One considering single words only and the others considering unigrams and bigrams.\n",
     "\n",
