--- a/src/04 train-val-test split.ipynb
+++ b/src/04 train-val-test split.ipynb
@@ -7,7 +7,12 @@
    "source": [
     "# Train-validation-test split\n",
     "\n",
-    "The data is split into train, validation and test split and the indices of each split are saved for future refence in other notebooks"
+    "One of the main concerns in every statistical learning project is that of finding a function that describes the training data as closely as possible while, at the same time, being able to generalise well enough on unseen data. To achieve this, measuring the performance of a model on the same data where it has been trained is not enough as this could lead to overfitting, meaning that the function obtained could describe the training data too closely and, at the same time, it may not able to recognise variations brought in by new data.\n",
+    "\n",
+    "While during a model training phase it might not always be possible to test the model performance on outside data, there are various techniques that can be used to have a fair way to test the model performance. When multiple models are compared with each other, a popular technique is a tree-way split of the data available into a train, validation, and test sets. Each model is fitted on the training set and the performance is measured on the predictions made on the validation set. The validation set is the one used to assess any experimentation. Finally, the test set is used to evaluate the final performance of the model on unseen data.\n",
+    "\n",
+    "In this notebook, the arXiv dataset is split into these three parts before starting training any of the models. At this point, the indices for each set are saved and referenced on every subsequent steps. This allows\n",
+    "efficient data storage while the datasets is used with different data processing techniques, according to the model implemented at each phase. At the same time, there is reassurance that the sets are consistent throughout the project, for a fair comparison among all classifiers."
    ]
   },
   {
